# mlx

./: .gitignore  AGENTS.md  Dockerfile  README.md  build.sh  build_env.sh  check_gpu.py  copyfiles.sh  deploy.sh  diagnose_cuda.sh  docker-compose.yml  env_vars.sh  fix_bitsandbytes.sh  init_pod.sh  push.sh  send.sh  setup.sh  setup_5090.sh  setup_dev.sh  ssh.sh  test_inference.sh  ui_dev.sh  ui_prod.sh  ui_staging.sh
api/: requirements.txt  server.py
common/: arguments.py  utils.py
inference/: Dockerfile  db.py  requirements.txt  serverless.py  test_list.json  test_predict.json  test_submit.json
models/: CNN.py  complex_mnist.py  hn_predict.py  hn_predict_utils.py  image_caption.py  image_caption_utils.py  msmarco_search.py  msmarco_tokenizer.py  urban_sounds.py
training/: arguments.py  prepare_vocab.py  requirements.txt  train_mnist_cnn.py
ui/: Dockerfile  complex_mnist_page.py  db.py  hn_predict_api.py  hn_predict_model_handler.py  hn_predict_page.py  image_caption_page.py  msmarco_search_page.py  prod_runner.sh  reddit_summariser_page.py  requirements.txt  simple_mnist_page.py  webserver.py  whisper_transcode_page.py
week0/: Dockerfile  README.md  db.py  models.py  (+6 more)
week2/: Dockerfile  README.md  analyze_duplicates.py  check_redis_data.py  check_redis_index.py  check_training_data.py  compare_vectors.py  dataset.py  debug_query_vector.npy  debug_search.py  docker-compose.yml  download.py  eval_results.json  evaluate.py  find_specific_doc.py  model.py  preprocess_data.py  pullDataset.py  pyproject.toml  requirements.txt  store_documents.py  streamlit_app.py  test_anchor_adapter.py  test_correct_similarity.py  test_found_documents.py  test_full_search.py  tokenizer.py  train_models.py  utils.py  verify_model.py  word2vec.py
week2/app/: main.py
week3/: Dockerfile  README.md  create_composite_images.py  detailed_profile.py  docker-compose.yml  models.py  profile_model.py  pyproject.toml  send.sh  setup.sh  ssh.sh  train_complex_model.py  uv.nightly.toml
week3/slides/: package.json  pnpm-lock.yaml  slides.md
week5/: .gitignore  README.md  decoder.py  download_open51.py  download_tfds_open_images.py  models.py  precompute_images.py  pyproject.toml  ssh.sh  train_models.py  utils.py
week5/tyrone/: README.md  pnpm-lock.yaml  pyproject.toml  send.sh  ssh.sh  utils.py
week6/: README.md  hello.py  inference.py  ppo.py  pyproject.toml  requirements.txt  reward.py  reward_model_test.py  run_merge.py  setup.sh  setup_5090.sh  sft.py  sft_model_test.py  ssh.sh  utils.py
week6/slides/: package.json  pnpm-lock.yaml  slides.md
(+49 files in other folders)
